# SymNebula

./: .gitignore  Cargo.toml  LICENSE  README.md
compute/: Cargo.toml
compute/src/: cpu.rs  gpu.rs  lib.rs  main.rs  scheduler.rs  tick.rs  trait_.rs  types.rs
core/: Cargo.toml
core/src/: ast.rs  brainstorm.rs  cluster.rs  engine.rs  graph.rs  lib.rs  solver.rs  solver_trait.rs  state.rs  viz.rs
core/src/guard/: mod.rs  num.rs
core/src/integrators/: mod.rs  symplectic.rs
core/src/solvers/: eval.rs  mod.rs  newton.rs
core/tests/: crash_safety.rs
desktop/: Cargo.toml
desktop/src/: cluster.rs  main.rs  shader.wgsl
docs/: ARCHITECTURE.md  BRAINSTORM_SPEC.md  MIN_SPEC.md  ROADMAP.md  SAFETY.md  TICK_FLOW.md  TODO.md
macros/: Cargo.toml
macros/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: main.rs  shader.wgsl
symmath/: Cargo.toml
symmath/crates/ast/: Cargo.toml
symmath/crates/ast/src/: arena.rs  expr.rs  lib.rs  ops.rs
symmath/crates/common/: Cargo.toml
symmath/crates/common/src/: ids.rs  lib.rs  span.rs  symbol.rs
symmath/crates/distributed_cluster_solver/: Cargo.toml
symmath/crates/distributed_cluster_solver/src/: main.rs  shader.wgsl
symmath/crates/distributed_cluster_solver_hpc/: Cargo.toml
symmath/crates/distributed_cluster_solver_hpc/src/: cluster.rs  communicator.rs  convergence.rs  jacobian.rs  lib.rs  main.rs  scheduler.rs  shader.wgsl
symmath/crates/gpu_batch_solver/: Cargo.toml
symmath/crates/gpu_batch_solver/src/: main.rs
symmath/crates/gpu_newton_solver/: Cargo.toml
symmath/crates/gpu_newton_solver/src/: main.rs  shader.wgsl
symmath/crates/gpu_newton_solver_advanced/: Cargo.toml
symmath/crates/gpu_newton_solver_advanced/src/: main.rs  shader.wgsl
symmath/crates/graph/: Cargo.toml
symmath/crates/graph/src/: graph.rs  jacobian.rs  lib.rs  node.rs  solver.rs  transaction.rs
symmath/crates/graph/tests/: curvature_jump.rs  curvature_jump_phase3.rs  newton_tests.rs
symmath/crates/ir/: Cargo.toml
symmath/crates/ir/src/: builder.rs  lib.rs  lower.rs  node.rs
symmath/crates/parser/: Cargo.toml
symmath/crates/parser/src/: lexer.rs  parser.rs  token.rs
symmath/crates/runtime/: Cargo.toml
symmath/crates/runtime/src/: lib.rs
