[package]
name = "sym-nebula-desktop"
version = "0.1.0"
edition = "2021"
description = "SymNebula Desktop — Pure wgpu + winit + egui"

[dependencies]
sym-nebula-core = { path = "../core" }
sym-nebula-compute = { path = "../compute" }
wgpu = "0.20"
winit = "0.30"
egui = "0.28"
egui-wgpu = "0.28"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8"
