[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/ast",
    "crates/parser",
    "crates/ir",
    "crates/runtime",
    "crates/graph",
    "crates/gpu_batch_solver",
    "crates/gpu_newton_solver",
    "crates/gpu_newton_solver_advanced",
    "crates/distributed_cluster_solver",
]
